--- a/security/pom.xml
+++ b/security/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.7.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <version>1.3.5.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>board.games</groupId>
             <artifactId>dictionary</artifactId>
