--- a/main-app/src/main/resources/application.properties
+++ b/main-app/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=validate
 
 server.port=8081
 
-server.servlet.session.cookie.max-age=1m
-server.servlet.session.cookie.name=JSESSIONID
+jwt.private.key=classpath:rsa.private.key
+jwt.public.key=classpath:rsa.public.key
