--- a/security/pom.xml
+++ b/security/pom.xml
@@ -28,17 +28,19 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session</artifactId>
-            <version>1.3.5.RELEASE</version>
-        </dependency>
-
-        <dependency>
             <groupId>board.games</groupId>
             <artifactId>dictionary</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
+
 
     </dependencies>
 </project>
