--- a/first-game/src/main/resources/application.properties
+++ b/first-game/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:8082/security
+spring.datasource.url=jdbc:postgresql://localhost:8082/first_game
 spring.datasource.username=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
-server.port=8081
+server.port=8083
 
-jwt.private.key=classpath:rsa.private.key
 jwt.public.key=classpath:rsa.public.key
