--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:8082/security
+spring.datasource.password=089563
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
