--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "nanoid": "^4.0.0",
     "normalize-css": "^2.3.1",
     "pinia": "^2.0.21",
