--- a/user-info-service/src/main/resources/application.properties
+++ b/user-info-service/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth
+spring.datasource.url=jdbc:postgresql://localhost:5434/user_info
 spring.datasource.username=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+
 spring.flyway.locations=classpath:db/migration
 
-server.port=8081
+server.port=8084
 
-jwt.private.key=classpath:rsa.private.key
 jwt.public.key=classpath:rsa.public.key
-
-url.user.info.service=http://localhost:8084/api
