--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "normalize-css": "^2.3.1",
     "pinia": "^2.0.21",
     "sass": "^1.54.9",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
