--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+    <modules>
+        <module>auth-service</module>
+        <module>first-game</module>
+        <module>user-info-service</module>
+        <module>game-info-service</module>
+    </modules>
 </project>
