--- a/first-game/pom.xml
+++ b/first-game/pom.xml
@@ -6,7 +6,9 @@
 
     <artifactId>first-game</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <start-class>board.games.first.game.FirstGame</start-class>
+    </properties>
     <parent>
         <groupId>org.example</groupId>
         <artifactId>board-portal</artifactId>
@@ -19,6 +21,27 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>2.7.4</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>board.games.first.game.FirstGame</mainClass>
+                    <layout>JAR</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <version>2.7.4</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
