--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,11 @@
             <artifactId>flyway-core</artifactId>
             <version>9.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 </project>
